--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta name="author" content="Chigbu Chiemela Bryan">
     <meta name="discription" content="Intro To Manhwa">
     <link rel="icon" type="image/ico" href="images/logo.png">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/manhwa.css">
     <link rel="stylesheet" href="styles/manhwa_sview.css">
     <title>Manhwa Magazine</title>
 </head>
 <body>
 
-    <div class="header">
-        <header>
-            <span class="logo"><img src="images/logo.png" alt="logo image"></span>
-            <nav>
-                <a href="">Home</a>
-                <a href="">Explore</a>
-                <a href="">FAQ</a>
-                <a href="">Contact</a>
-            </nav>
-        </header>
-    </div>
+    <header>
+        <span class="logo"><img src="images/logo.png" alt="logo image"></span>
+        <nav>
+            <ul class="navigation">
+                <li><a href="">Home</a></li>
+                <li><a href="explore.html">Explore</a></li>
+                <li><a href="">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main id="hero_body">
-        <div id="hero"><img src="images/Glow1-ezgif.com-gif-maker.gif" alt="Glow Orb"></div>
+        <img class="hero_img" src="images/web_bg.webp">
         <a class="explore" href="">Explore</a>
 
         <div class="hero_header">
@@ -33,9 +33,9 @@
             <div class="yellow"></div>
             <div class="blue"></div>
             <h2>Step Into The Panel</h2>
+            <p>Your Gateway to the Best in <br>Webtoons!</p>
         </div>
 
-        <p>Your Gateway to the Best in <br>Webtoons!</p>
     </main>
 
 </body>
