--- a/explore.html
+++ b/explore.html
@@ -20,7 +20,8 @@
             <ul class="navigation">
                 <li><a href="">Home</a></li>
                 <li><a href="">Explore</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
     </header>
@@ -82,16 +83,19 @@
     </main>
 
     <footer>
-        <div class="f1">
-            <p><strong>Onitash Chamber of Commerce</strong></p>
-        </div>
 
         <div class="social_grid">
+
             <span>
+                <img class="footer_logo" src="images/logo.png" alt="" width="60px" height="60px">
+                <p><strong>ComicHub</strong></p>
+            </span>
+
+            <span>
+                <p><strong>Onitash Chamber of Commerce</strong></p>
                 <p>28 Bida Road, Odoakpu, Onitsha</p>
-                <p>Onitsha, mail 200</p>
-                <p><span id="mail"><a href="mailto:botbryan2.2@gmail.com">botbryan2.2@gmail.com</a></span></p>
                 <p>+2349063141524</p>
+                <p><span id="mail"><a href="mailto:botbryan2.2@gmail.com">botbryan2.2@gmail.com</a></span></p>
             </span>
 
             <span>
