--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="">About Us</a></li>
+                <li><a href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
     </header>
