--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <span class="logo"><img src="images/logo.png" alt="logo image"></span>
         <nav>
             <ul class="navigation">
-                <li><a href="">Home</a></li>
-                <li><a href="">Explore</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="explore.html">Explore</a></li>
+                <li><a id ="current" href="about.html">About Us</a></li>
                 <li><a id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
