--- a/explore.html
+++ b/explore.html
@@ -18,10 +18,10 @@
         <span class="logo"><img src="images/logo.png" alt="logo image"></span>
         <nav>
             <ul class="navigation">
-                <li><a href="">Home</a></li>
-                <li><a href="">Explore</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a id ="current" href="">Explore</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Subcribe</a></li>
+                <li><a id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
     </header>
@@ -63,20 +63,20 @@
 
         <div class="carousel">
             <div class="group">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_1_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_2_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_3_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_4_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_5_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_6_ver.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/da8tv9ojugbrqqq6yiok.webp" alt="" width="60px" height="80px">
+                <img class="image" src="images/slide/k96xukifxxz1ohf4whcg.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/lcuxuhsjnvmxbipmgwlk.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/oagvnwbjyofqoqkpywlg.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/pf5b26wt3rctgxzmih6t.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/whofyr2yixe1xqgpx9sz.webp" alt="" width="60px" height="50px">
             </div>
             <div aria-hidden class="group">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_1_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_2_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_3_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_4_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_5_ver.webp" alt="" width="60px" height="50px">
-                <img class="image" src="images/omniscient_reader/omniscient_reader_photos/photo_6_ver.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/da8tv9ojugbrqqq6yiok.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/k96xukifxxz1ohf4whcg.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/lcuxuhsjnvmxbipmgwlk.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/oagvnwbjyofqoqkpywlg.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/pf5b26wt3rctgxzmih6t.webp" alt="" width="60px" height="50px">
+                <img class="image" src="images/slide/whofyr2yixe1xqgpx9sz.webp" alt="" width="60px" height="50px">
             </div>
         </div>
 
