--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <span class="logo"><img src="images/logo.png" alt="logo image"></span>
         <nav>
             <ul class="navigation">
-                <li><a href="">Home</a></li>
+                <li><a id ="current" href="">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="contact.html">Subcribe</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
     </header>
-
+ 
     <main id="hero_body">
         <img class="hero_img" src="images/web_bg.webp">
         <a class="explore" href="">Explore</a>
