--- a/contact.html
+++ b/contact.html
@@ -35,26 +35,17 @@
     <title>Chamber Directory</title>
 </head>
 <body class="light_background">
-
+    
     <header>
-        <img class="logo" src="images/briefcase-fill.svg" alt="website logo">
-        <h2>Onitash Chamber of Commerce</h2>
-
+        <span class="logo"><img src="images/logo.png" alt="logo image"></span>
         <nav>
-
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
-                <li><a href= "about.html">About</a></li>
-                <li><a id ="current" class="contact" href="">Subcribe</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a id ="current" id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
-
         </nav>
-
-        <a class="mode"><img class="light_mode" src="images/brightness-low-fill.svg" alt="Light mode icon"><img class="dark_mode" src="images/moon-stars-fill.svg" alt="Dark mode icon"></a>
-
-        <button id="menu"></button>
-
     </header>
     
     <main>
