--- a/contact.html
+++ b/contact.html
@@ -155,28 +155,30 @@
     </main>
 
     <footer>
-        <div class="left_grid">
-            <p><strong>Onitash Chamber of Commerce</strong></p>
-            <p>28 Bida Road, Odoakpu, Onitsha</p>
-            <p>Onitsha, mail 200</p>
-            <p><span><a href="mailto:botbryan2.2@gmail.com">botbryan2.2@gmail.com</a></span></p>
-            <p>+2349063141524</p>
-        </div>
 
         <div class="social_grid">
-            <a href="https://www.linkedin.com/in/bryan-chigbu-744174232/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn social" width="16" height="16"></a>
-            <a href="https://github.com/BoTBry" target="_blank"><img src="images/github.svg" alt="GitHub social" width="16" height="16"></a>
-            <a href="https://x.com/BoTBryan_Devs" target="_blank"><img src="images/twitter-x.svg" alt="Twitter social" width="16" height="16"></a>
+
+            <span>
+                <img class="footer_logo" src="images/logo.png" alt="" width="60px" height="60px">
+                <p><strong>ComicHub</strong></p>
+            </span>
+
+            <span>
+                <p><strong>Onitash Chamber of Commerce</strong></p>
+                <p>28 Bida Road, Odoakpu, Onitsha</p>
+                <p>+2349063141524</p>
+                <p><span id="mail"><a href="mailto:botbryan2.2@gmail.com">botbryan2.2@gmail.com</a></span></p>
+            </span>
+
+            <span>
+                <a href="https://www.linkedin.com/in/bryan-chigbu-744174232/" target="_blank"><img src="images/socials/linkedin.svg" alt="LinkedIn social" width="16" height="16"></a>
+                <a href="https://github.com/BoTBry" target="_blank"><img src="images/socials/github.svg" alt="GitHub social" width="16" height="16"></a>
+                <a href="https://x.com/BoTBryan_Devs" target="_blank"><img src="images/socials/twitter-x.svg" alt="Twitter social" width="16" height="16"></a>
+            </span>
         </div>
 
-        <div class="right_grid">
-            <p>WDD 231 Class Project</p>
-            <p class="name"></p>
-            <p>&copy; <span class="current_year"></span> Onitash Chamber of Commerce</p>
-            <p>Last Modification: <span class="lastModification"></span></p>
-        </div>
-
+        <p class="footer_border">&copy; BoTBryan ALL RIGHTS RESERVED.</p>
     </footer>
-
+    
 </body>
 </html>
