--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     <button>
                         <span>
                             <h5>What are Venom Bears?</h5></span>
-                        <span>+</span>
+                        <span class="d-arrow" ><img src="images/socials/chevron-up.svg" alt=""></span>
                     </button>
                     <p>The cuddliest collection on the Venom Blockchain</p>
                 </div>
@@ -70,7 +70,7 @@
                     <button>
                         <span>
                             <h5>What's the royalty?</h5></span>
-                        <span>+</span>
+                        <span class="d-arrow" ><img src="images/socials/chevron-up.svg" alt=""></span>
                     </button>
                     <p>The royalies will be 5%</p>
                 </div>
@@ -78,7 +78,7 @@
                     <button>
                         <span>
                             <h5>Which wallet can I use to mint?</h5></span>
-                        <span>+</span>
+                        <span class="d-arrow"><img src="images/socials/chevron-up.svg" alt=""></span>
                     </button>
                     <p>The Venom Wallet <a href="https://venomwallet.com/" target="_blank">Learn More</a></p>
                 </div>
