--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a id ="current" id="subcribe" href="contact.html">Subcribe</a></li>
+                <li><a class ="current" id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
     </header>
@@ -179,6 +179,6 @@
 
         <p class="footer_border">&copy; BoTBryan ALL RIGHTS RESERVED.</p>
     </footer>
-    
+
 </body>
 </html>
