--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore.html">Explore</a></li>
-                <li><a id ="current" href="about.html">About Us</a></li>
+                <li><a class ="current" href="about.html">About Us</a></li>
                 <li><a id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
         </nav>
