--- a/explore.html
+++ b/explore.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a id ="current" href="">Explore</a></li>
+                <li><a class ="current" href="">Explore</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a id="subcribe" href="contact.html">Subcribe</a></li>
             </ul>
