--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/ico" href="images/logo.png">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/about_sview.css">
     <script src="scripts/faq.js" defer></script>
     <title>Document</title>
 </head>
