--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-<!--  
+
     <main id="hero_body">
         <img class="hero_img" src="images/web_bg.webp">
         <a class="explore" href="">Explore</a>
@@ -37,7 +37,7 @@
             <p>Your Gateway to the Best in <br>Webtoons!</p>
         </div>
 
-    </main> -->
+    </main>
 
 </body>
 </html>
